refactor(frontend): restructure frontend directory from src to fe
feat(backend): add new test files and API services
fix(backend): update redis manager initialization method
docs: update README.md to reflect new frontend directory structure
chore: update .gitignore with new patterns
style: fix formatting in various files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 node_modules/
+upload_file/
+completed/
+be/llm_knowledge_processing/__pycache__/
+be/common/__pycache__/
+be/logs/
+be/api_services/__pycache__/
