chore: update gitignore paths for python cache files
Update paths in .gitignore to reflect new src directory structure for python cache files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules/
 upload_file/
 completed/
-be/llm_knowledge_processing/__pycache__/
-be/common/__pycache__/
-be/logs/
-be/api_services/__pycache__/
+src/be/llm_knowledge_processing/__pycache__/
+src/be/common/__pycache__/
+src/be/logs/
+src/be/api_services/__pycache__/
